embedingcode로 안바뀌어져 있는 부분 수정

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,31 +2,31 @@
 	"@metadata": {
 		"authors": []
 	},
-	"embedvideo_description": "Adds a parser function embedding video from popular sources.",
-	"error_embedvideo_missingparams": "EmbedVideo is missing a required parameter.",
-	"error_embedvideo_service": "EmbedVideo does not recognize the video service \"$1\".",
-	"error_embedvideo_id": "EmbedVideo received the bad id \"$2\" for the service \"$1\".",
-	"error_embedvideo_width": "EmbedVideo received the bad width parameter \"$1\".",
-	"error_embedvideo_height": "EmbedVideo received the bad height parameter \"$1\".",
-	"error_embedvideo_alignment": "EmbedVideo was given an illegal value for the alignment parameter \"$1\".  Valid values are \"left\", \"center\", \"right\", or \"inline\".",
-	"error_embedvideo_valignment": "EmbedVideo was given an illegal value for the valignment parameter \"$1\".  Valid values are \"top\", \"middle\", \"bottom\", or \"baseline\".",
-	"error_embedvideo_urlargs": "EmbedVideo received a list of URL arguments that contained malformed data or blank arguments.",
-	"error_embedvideo_unknown": "EmbedVideo encountered an unknown error while trying to generate this video embed block.  ($1)",
-	"error_embedvideo_evp_deprecated": "The #evp parser function was deprecated in EmbedVideo 2.0.  Please convert your parser function tag to #ev.",
-	"error_embedvideo_container": "The parameter provided for 'container' is invalid.",
+	"EmbedingCode_description": "Adds a parser function embedding video from popular sources.",
+	"error_EmbedingCode_missingparams": "EmbedingCode is missing a required parameter.",
+	"error_EmbedingCode_service": "EmbedingCode does not recognize the video service \"$1\".",
+	"error_EmbedingCode_id": "EmbedingCode received the bad id \"$2\" for the service \"$1\".",
+	"error_EmbedingCode_width": "EmbedingCode received the bad width parameter \"$1\".",
+	"error_EmbedingCode_height": "EmbedingCode received the bad height parameter \"$1\".",
+	"error_EmbedingCode_alignment": "EmbedingCode was given an illegal value for the alignment parameter \"$1\".  Valid values are \"left\", \"center\", \"right\", or \"inline\".",
+	"error_EmbedingCode_valignment": "EmbedingCode was given an illegal value for the valignment parameter \"$1\".  Valid values are \"top\", \"middle\", \"bottom\", or \"baseline\".",
+	"error_EmbedingCode_urlargs": "EmbedingCode received a list of URL arguments that contained malformed data or blank arguments.",
+	"error_EmbedingCode_unknown": "EmbedingCode encountered an unknown error while trying to generate this video embed block.  ($1)",
+	"error_EmbedingCode_evp_deprecated": "The #evp parser function was deprecated in EmbedingCode 2.0.  Please convert your parser function tag to #ev.",
+	"error_EmbedingCode_container": "The parameter provided for 'container' is invalid.",
 	"ev_video_short_desc": "$1, $2x$3",
 	"ev_video_long_desc": "$1, $2 codec, length $3, $4x$5 pixels, $6 overall",
 	"ev_audio_short_desc": "$1",
 	"ev_audio_long_desc": "$1, $2 codec, length $3, $4 overall",
-	"error_embedvideo_cantdecode_evu": "Couldn't parse video from $1",
+	"error_EmbedingCode_cantdecode_evu": "Couldn't parse video from $1",
 	"ev_default_play_desc": "Play video",
-	"apihelp-embedvideo-summary": "Get generated video embed code for given parameters.",
-	"apihelp-embedvideo-param-service": "Name of the service (youtube, twitch, ect)",
-	"apihelp-embedvideo-param-id": "The ID of the video for that service",
-	"apihelp-embedvideo-param-dimensions": "Either a numeric width (100) or width by height (100x100)",
-	"apihelp-embedvideo-param-alignment": "Alignment of video",
-	"apihelp-embedvideo-param-description": "Description of video",
-	"apihelp-embedvideo-param-container": "Accepts frame, or leave empty",
-	"apihelp-embedvideo-param-urlargs": "Additional arguments to pass in the video url (for some services)",
-	"apihelp-embedvideo-param-autoresize": "Auto resize video? (true or false)"
+	"apihelp-EmbedingCode-summary": "Get generated video embed code for given parameters.",
+	"apihelp-EmbedingCode-param-service": "Name of the service (youtube, twitch, ect)",
+	"apihelp-EmbedingCode-param-id": "The ID of the video for that service",
+	"apihelp-EmbedingCode-param-dimensions": "Either a numeric width (100) or width by height (100x100)",
+	"apihelp-EmbedingCode-param-alignment": "Alignment of video",
+	"apihelp-EmbedingCode-param-description": "Description of video",
+	"apihelp-EmbedingCode-param-container": "Accepts frame, or leave empty",
+	"apihelp-EmbedingCode-param-urlargs": "Additional arguments to pass in the video url (for some services)",
+	"apihelp-EmbedingCode-param-autoresize": "Auto resize video? (true or false)"
 }
