--- a/i18n/de.json
+++ b/i18n/de.json
@@ -4,16 +4,16 @@
 			"Messerjokke79"
 		]
 	},
-	"embedvideo_description": "Fügt eine Parserfunktion hinzu, mittels derer Videos populärer Dienste eingebettet werden können.",
-	"error_embedvideo_missingparams": "EmbedVideo fehlt ein anzugebender Parameter.",
-	"error_embedvideo_service": "EmbedVideo erkennt den Videodienst „$1“ nicht.",
-	"error_embedvideo_id": "EmbedVideo erhielt die unbrauchbare ID „$2“ für „$1“.",
-	"error_embedvideo_width": "EmbedVideo erhielt den unbrauchbaren width-Parameter „$1“.",
-	"error_embedvideo_height": "EmbedVideo erhielt den unbrauchbaren height-Parameter „$1“.",
-	"error_embedvideo_alignment": "EmbedVideo erhielt den unbrauchbaren alignment-Parameter „$1“; <span style=\"color: DarkRed\">gültig sind „left“, „center“ und „right“</span>.",
-	"error_embedvideo_valignment": "EmbedVideo erhielt den unbrauchbaren valignment-Parameter „$1“; <span style=\"color: DarkRed\">gültig sind „top“, „middle“, „bottom“ und „baseline“</span>.",
-	"error_embedvideo_urlargs": "EmbedVideo erhielt eine Liste von URL-Argumenten, die unbrauchbare Daten oder leere Argumente aufwiesen.",
-	"error_embedvideo_unknown": "EmbedVideo stieß auf einen Fehler während das Video eingebettet werden sollte. ($1)",
-	"error_embedvideo_evp_deprecated": "Die Parserfunktion „#evp“ wurde in EmbedVideo 2.0 verworfen; alle Parserfunktionen-Tags sind in „#ev“ zu ändern.",
-	"error_embedvideo_container": "Der Wert für „container“ ist ungültig."
+	"EmbedingCode_description": "Fügt eine Parserfunktion hinzu, mittels derer Videos populärer Dienste eingebettet werden können.",
+	"error_EmbedingCode_missingparams": "EmbedingCode fehlt ein anzugebender Parameter.",
+	"error_EmbedingCode_service": "EmbedingCode erkennt den Videodienst „$1“ nicht.",
+	"error_EmbedingCode_id": "EmbedingCode erhielt die unbrauchbare ID „$2“ für „$1“.",
+	"error_EmbedingCode_width": "EmbedingCode erhielt den unbrauchbaren width-Parameter „$1“.",
+	"error_EmbedingCode_height": "EmbedingCode erhielt den unbrauchbaren height-Parameter „$1“.",
+	"error_EmbedingCode_alignment": "EmbedingCode erhielt den unbrauchbaren alignment-Parameter „$1“; <span style=\"color: DarkRed\">gültig sind „left“, „center“ und „right“</span>.",
+	"error_EmbedingCode_valignment": "EmbedingCode erhielt den unbrauchbaren valignment-Parameter „$1“; <span style=\"color: DarkRed\">gültig sind „top“, „middle“, „bottom“ und „baseline“</span>.",
+	"error_EmbedingCode_urlargs": "EmbedingCode erhielt eine Liste von URL-Argumenten, die unbrauchbare Daten oder leere Argumente aufwiesen.",
+	"error_EmbedingCode_unknown": "EmbedingCode stieß auf einen Fehler während das Video eingebettet werden sollte. ($1)",
+	"error_EmbedingCode_evp_deprecated": "Die Parserfunktion „#evp“ wurde in EmbedingCode 2.0 verworfen; alle Parserfunktionen-Tags sind in „#ev“ zu ändern.",
+	"error_EmbedingCode_container": "Der Wert für „container“ ist ungültig."
 }
