--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -2,21 +2,21 @@
 	"@metadata": {
 		"authors": [ "Railfail536" ]
 	},
-	"embedvideo_description": "Dadaje funkcje parsera do osadzania plików wideo z popularnych serwisów",
-	"error_embedvideo_missingparams": "Nie podano wymaganego parametru EmbedVideo.",
-	"error_embedvideo_service": "EmbedVideo nie rozpoznaje usługi wideo „$1”.",
-	"error_embedvideo_id": "EmbedVideo napotkał błędne ID „$2” dla usługi „$1”.",
-	"error_embedvideo_width": "EmbedVideo napotkał błędny parametr width „$1”.",
-	"error_embedvideo_height": "EmbedVideo napotkał błędny parametr height „$1”.",
-	"error_embedvideo_alignment": "EmbedVideo napotkał błędny parametr alignment „$1”. Poprawnymi wartościami są „left”,  „center” lub „right”.",
-	"error_embedvideo_valignment": "EmbedVideo napotkał błędny parametr valignment „$1”. Poprawnymi wartościami są „top”, „middle”, „bottom” lub „baseline”.",
-	"error_embedvideo_urlargs": "EmbedVideo napotkał listę argumentów URL zawierajacą zniekształcone dane lub puste argumenty.",
-	"error_embedvideo_unknown": "EmbedVideo napotkał nieznany błąd podczas próby wygenerowania tego pliku wideo. ($1)",
-	"error_embedvideo_evp_deprecated": "Funkcja parsera #evp jest przestarzała od EmbedVideo w wersji 2.0. Prosimy przekonwertować funkcję na #ev.",
-	"error_embedvideo_container": "Podany parametr dla wartości „container” nie jest poprawny.",
+	"EmbedingCode_description": "Dadaje funkcje parsera do osadzania plików wideo z popularnych serwisów",
+	"error_EmbedingCode_missingparams": "Nie podano wymaganego parametru EmbedingCode.",
+	"error_EmbedingCode_service": "EmbedingCode nie rozpoznaje usługi wideo „$1”.",
+	"error_EmbedingCode_id": "EmbedingCode napotkał błędne ID „$2” dla usługi „$1”.",
+	"error_EmbedingCode_width": "EmbedingCode napotkał błędny parametr width „$1”.",
+	"error_EmbedingCode_height": "EmbedingCode napotkał błędny parametr height „$1”.",
+	"error_EmbedingCode_alignment": "EmbedingCode napotkał błędny parametr alignment „$1”. Poprawnymi wartościami są „left”,  „center” lub „right”.",
+	"error_EmbedingCode_valignment": "EmbedingCode napotkał błędny parametr valignment „$1”. Poprawnymi wartościami są „top”, „middle”, „bottom” lub „baseline”.",
+	"error_EmbedingCode_urlargs": "EmbedingCode napotkał listę argumentów URL zawierajacą zniekształcone dane lub puste argumenty.",
+	"error_EmbedingCode_unknown": "EmbedingCode napotkał nieznany błąd podczas próby wygenerowania tego pliku wideo. ($1)",
+	"error_EmbedingCode_evp_deprecated": "Funkcja parsera #evp jest przestarzała od EmbedingCode w wersji 2.0. Prosimy przekonwertować funkcję na #ev.",
+	"error_EmbedingCode_container": "Podany parametr dla wartości „container” nie jest poprawny.",
 	"ev_video_short_desc": "$1, $2x$3",
 	"ev_video_long_desc": "$1, $2 codec, length $3, $4x$5 pixels, $6 overall",
 	"ev_audio_short_desc": "$1",
 	"ev_audio_long_desc": "$1, $2 codec, length $3, $4 overall",
-	"error_embedvideo_cantdecode_evu": "Parsowanie wideo z $1 nie powiodło się"
+	"error_EmbedingCode_cantdecode_evu": "Parsowanie wideo z $1 nie powiodło się"
 }
